--- a/Lista1_Jacson.ipynb
+++ b/Lista1_Jacson.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8ybMWvcuo02Y8aVikVcxS",
+      "authorship_tag": "ABX9TyNrtn2ObuTXXg5j8txaId9C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AnaLuisaPS07/Meu-Reposit-rio/blob/main/Lista1_Jacson.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AnaLuisaPS07/ip-2024-01/blob/main/Lista1_Jacson.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -127,6 +127,45 @@
       "metadata": {
         "id": "_uBKc3CkXODJ"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "QUESTÃO 3\n",
+        "\n",
+        "Var\n",
+        "\n",
+        "n1, n2, n3, número, quadrado: inteiro\n",
+        "\n",
+        "Escreva (\"Digite um número: \")\n",
+        "\n",
+        "Leia (n1)\n",
+        "\n",
+        "Escreva (“Digite outro número: ”)\n",
+        "\n",
+        "Leia (n2)\n",
+        "\n",
+        "Escreva (“Digite mais um número: ”)\n",
+        "\n",
+        "Leia (n3)\n",
+        "\n",
+        "se n1 >= 10 ou n2 >= 10 ou n3 >= 10 então\n",
+        "\n",
+        "Escreva (\"DIGITO INVALIDO\")\n",
+        "\n",
+        "Senão\n",
+        "\n",
+        "número <- (n1 * 100 + n2 * 10 + n3)\n",
+        "\n",
+        "quadrado <- número * número\n",
+        "\n",
+        "Escreva (número, \", \", quadrado)"
+      ],
+      "metadata": {
+        "id": "bWYCKiZMS89C"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
