--- a/Lista1_Jacson.ipynb
+++ b/Lista1_Jacson.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrtn2ObuTXXg5j8txaId9C",
+      "authorship_tag": "ABX9TyMeVn6PUp/QzBGrMJ5wq42j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +47,17 @@
     {
       "cell_type": "code",
       "source": [
+        "//Essa atividade foi postada dentro do prazo estabelecido, porém estava em formatação de texto, fiz a alteração para o formato de código para melhor compreensão."
+      ],
+      "metadata": {
+        "id": "ZYPHaDrCVW4p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "Questão 1\n",
         "\n",
         "\n",
@@ -78,55 +89,13 @@
         "Escreva (\"Caso de teste \", loop, \": \")\n",
         "Leia (tp, pp, pg, pa, pc)\n",
         "Renda_total <- (pp * 1) + (pg * 5) + (pa * 10) + (pc * 20)\n",
-        "Escreva (\"A RENDA DO JOGO N. \", loop, \" E = \", renda_total:0:2, \"\\n\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "Escreva (\"A RENDA DO JOGO N. \", loop, \" E = \", renda_total:0:2, \"\\n\")\n"
       ],
       "metadata": {
         "id": "9P576uMAI_9Y"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**QUESTÃO 3**\n",
-        "\n",
-        "Var\n",
-        "\n",
-        "n1, n2, n3, número, quadrado: inteiro\n",
-        "\n",
-        "\n",
-        "Escreva (\"Digite um número: \")\n",
-        "\n",
-        "Leia (n1)\n",
-        "\n",
-        "Escreva (“Digite outro número: ”)\n",
-        "\n",
-        "Leia (n2)\n",
-        "\n",
-        "Escreva (“Digite mais um número: ”)\n",
-        "\n",
-        "Leia (n3)\n",
-        "\n",
-        "se n1 >= 10 ou n2 >= 10 ou n3 >= 10 então\n",
-        "\n",
-        "Escreva (\"DIGITO INVALIDO\")\n",
-        "\n",
-        "  Senão\n",
-        "\n",
-        "número <- (n1 * 100 + n2 * 10 + n3)\n",
-        "\n",
-        "quadrado <- número * número\n",
-        "\n",
-        "Escreva (número, \", \", quadrado)\n"
-      ],
-      "metadata": {
-        "id": "_uBKc3CkXODJ"
-      }
     },
     {
       "cell_type": "code",
@@ -168,14 +137,14 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
         "**QUESTÃO 4**\n",
         "\n",
         "Var\n",
         "\n",
         "sm, kwgastos, valorkw, cc, cd: real\n",
-        "    \n",
+        "\n",
         "Escreva (\"Digite o valor do salário mínimo: R$ \")\n",
         "\n",
         "Leia(sm)\n",
@@ -186,7 +155,7 @@
         "\n",
         "valorkw <- (sm * 0.7) / 100\n",
         "\n",
-        "cc <- kwgastos * valorkw  \n",
+        "cc <- kwgastos * valorkw\n",
         "\n",
         "cd <- cc * 0.9\n",
         "\n",
@@ -197,11 +166,13 @@
         "Escreva (\"Esse é o custo com desconto: R$ \", cd:0:2, \"\\n\")\n"
       ],
       "metadata": {
-        "id": "DQpRhzQUX8wN"
-      }
+        "id": "L3pghSW6T8FD"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
         "**QUESTÃO 5**\n",
         "\n",
@@ -229,7 +200,7 @@
         "\n",
         "      senão\n",
         "\n",
-        "        conta <- 500.00 + 0.25 * (agua - 80)  \n",
+        "        conta <- 500.00 + 0.25 * (agua - 80)\n",
         "\n",
         "caso 'I'\n",
         "\n",
@@ -252,13 +223,15 @@
         "Escreva (\"VALOR DA CONTA = \", valor_conta:0:2, \"\\n\")\n"
       ],
       "metadata": {
-        "id": "F0mZQ2pfYGlu"
-      }
+        "id": "3OnTtJDzUHli"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 6**\n",
+        "QUESTÃO 6\n",
         "\n",
         "var\n",
         "\n",
@@ -276,16 +249,18 @@
         "\n",
         "tc <- 5 * (tf - 32) / 9\n",
         "\n",
-        "Escreva (tf, \" FAHRENHEIT EQUIVALE A \", tc:0:2, \" CELSIUS\\n\")\n"
+        "Escreva (tf, \" FAHRENHEIT EQUIVALE A \", tc:0:2, \" CELSIUS\\n\")"
       ],
       "metadata": {
-        "id": "hbLWI06GYeUy"
-      }
+        "id": "VNb2wEG6UUIp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 7**\n",
+        "QUESTÃO 7\n",
         "\n",
         "var\n",
         "\n",
@@ -305,22 +280,22 @@
         "\n",
         "Escreva (\"O VALOR EM CELSIUS = \", temperatura_celsius:0:2, \"\\n\")\n",
         "\n",
-        "Escreva (\"A QUANTIDADE DE CHUVA É = \", quantidade_chuva_mm:0:2, \"\\n\")\n"
+        "Escreva (\"A QUANTIDADE DE CHUVA É = \", quantidade_chuva_mm:0:2, \"\\n\")"
       ],
       "metadata": {
-        "id": "5exXjRjMYpUC"
-      }
+        "id": "2nSfwOYqUOmp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 8**\n",
+        "QUESTÃO 8\n",
         "\n",
-        "const\n",
-        "    pi: real = 3.14159\n",
+        "const pi: real = 3.14159\n",
         "\n",
-        "var\n",
-        "    raio, altura, circulo, lateral, total, custo: real\n",
+        "var raio, altura, circulo, lateral, total, custo: real\n",
         "\n",
         "Escreva (\"Digite o raio da lata (em metros): \")\n",
         "\n",
@@ -338,19 +313,20 @@
         "\n",
         "custo <- (total * 100)\n",
         "\n",
-        "Escreva (\"O VALOR DO CUSTO É = \", custo:0:2, \"\\n\")\n"
+        "Escreva (\"O VALOR DO CUSTO É = \", custo:0:2, \"\\n\")"
       ],
       "metadata": {
-        "id": "0ZsVQgH2YyJr"
-      }
+        "id": "LTDDfzHwUPUj"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 9**\n",
+        "QUESTÃO 9\n",
         "\n",
-        "var\n",
-        "A, B, C, delta: real\n",
+        "var A, B, C, delta: real\n",
         "\n",
         "Escreva (\"Digite o coeficiente A: \")\n",
         "\n",
@@ -366,17 +342,18 @@
         "\n",
         "delta <- (B * B - 4 * A * C)\n",
         "\n",
-        "Escreva (\"O VALOR DE DELTA É = \", delta:0:2, \"\\n\")\n",
-        "\n"
+        "Escreva (\"O VALOR DE DELTA É = \", delta:0:2, \"\\n\")"
       ],
       "metadata": {
-        "id": "v-z6tVZ9Y9Qj"
-      }
+        "id": "r9ITaOp2UP_K"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "***QUESTÃO 10 ***\n",
+        "*QUESTÃO 10 *\n",
         "\n",
         "var\n",
         "\n",
@@ -400,19 +377,20 @@
         "\n",
         "determinante <- (a * d) - (b * c)\n",
         "\n",
-        "Escreva (\"O VALOR DO DETERMINANTE É = \", determinante:0:2, \"\\n\")\n"
+        "Escreva (\"O VALOR DO DETERMINANTE É = \", determinante:0:2, \"\\n\")"
       ],
       "metadata": {
-        "id": "koI8E-KjZEzq"
-      }
+        "id": "8z_xqrgXUS3l"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 11**\n",
+        "QUESTÃO 11\n",
         "\n",
-        "Var\n",
-        "n: inteiro\n",
+        "Var n: inteiro\n",
         "\n",
         "Escreva (“Digite um número: ”)\n",
         "\n",
@@ -422,22 +400,22 @@
         "\n",
         "Escreva (\"O número é divisível\\n\")\n",
         "\n",
-        " Senão\n",
+        "Senão\n",
         "\n",
-        "Escreva (\"O número não é divisível\\n\")\n",
-        "\n"
+        "Escreva (\"O número não é divisível\\n\")"
       ],
       "metadata": {
-        "id": "wj_T9b_cZNHc"
-      }
+        "id": "cFo4bH-fUEMx"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 12**\n",
+        "QUESTÃO 12\n",
         "\n",
-        "Var\n",
-        "horas, valor: inteiro\n",
+        "Var horas, valor: inteiro\n",
         "\n",
         "Escreva (“Digite o total de horas usadas: ”)\n",
         "\n",
@@ -453,20 +431,20 @@
         "\n",
         "Fimse\n",
         "\n",
-        "Escreva (“O valor a pagar é”, valor: 0.2, /n)\n"
+        "Escreva (“O valor a pagar é”, valor: 0.2, /n)"
       ],
       "metadata": {
-        "id": "asq77xTsZTNr"
-      }
+        "id": "CdBPE5nSUGZi"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 13**\n",
+        "QUESTÃO 13\n",
         "\n",
-        "var\n",
-        "    nota: real\n",
-        "    conceito: caractere\n",
+        "var nota: real conceito: caractere\n",
         "\n",
         "Escreva (\"Digite a nota do aluno: \")\n",
         "\n",
@@ -474,30 +452,27 @@
         "\n",
         "se (nota >= 9.0) então\n",
         "\n",
-        "   conceito <- 'A'\n",
+        "conceito <- 'A'\n",
         "\n",
         "senão se (nota >= 7.5) então\n",
         "\n",
-        "    conceito <- 'B'\n",
-        "\n",
+        "conceito <- 'B'\n",
         "senão se (nota >= 6.0) então\n",
         "\n",
-        "    conceito <- 'C'\n",
+        "conceito <- 'C'\n",
+        "senão conceito <- 'D'\n",
         "\n",
-        "senão\n",
-        "        conceito <- 'D'\n",
-        "\n",
-        "    fimse\n",
-        "\n",
-        "Escreva (\"NOTA = \", nota:1:1, \" CONCEITO = \", conceito, \"\\n\")\n",
-        "\n"
+        "fimse\n",
+        "Escreva (\"NOTA = \", nota:1:1, \" CONCEITO = \", conceito, \"\\n\")"
       ],
       "metadata": {
-        "id": "NJMo_EKNZaVq"
-      }
+        "id": "tK9X_9x1UtNG"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
         "**QUESTÃO 14**\n",
         "\n",
@@ -515,80 +490,71 @@
         "Escreva (\"O VOLUME DA PIRAMIDE É = \", volume:0.2, \" METROS CUBICOS\\n\")\n"
       ],
       "metadata": {
-        "id": "d_AJeDfdZpBS"
-      }
+        "id": "r2wH21PYUtEp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 15**\n",
+        "QUESTÃO 15\n",
         "\n",
-        "var\n",
-        "    n, valor: inteiro\n",
+        "var n, valor: inteiro\n",
         "\n",
         "Escreva (\"Digite um valor inteiro N (5 < N < 2000): \")\n",
         "\n",
         "Leia(N)\n",
         "\n",
-        " Para valor de 1 até n faca\n",
+        "Para valor de 1 até n faca\n",
         "\n",
-        "        se valor % 2 = 0 então\n",
-        "\n",
+        "    se valor % 2 = 0 então\n",
         "Escreva (valor, \"^2 = \", valor * valor, \"\\n\")\n",
         "\n",
-        "        fimse\n",
+        "    fimse\n",
         "\n",
-        "    fimpara\n",
-        "\n",
-        "\n",
-        "\n"
+        "fimpara"
       ],
       "metadata": {
-        "id": "f4EQZuPNZwQy"
-      }
+        "id": "OGEg3BBwUs7Q"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "tyLJ7ydbXj_T"
-      }
-    },
-    {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 16**\n",
+        "QUESTÃO 16\n",
         "\n",
-        "var\n",
-        "    salario, reajustado: real\n",
+        "var salario, reajustado: real\n",
         "\n",
         "Escreva (\"Digite o salário do funcionário: \")\n",
         "\n",
         "Leia (salario)\n",
         "\n",
-        "  se salario <= 300 então\n",
+        "se salario <= 300 então\n",
         "\n",
-        " reajustado <- salario + (salario * 0.5)\n",
+        "reajustado <- salario + (salario * 0.5)\n",
         "\n",
-        "  senao\n",
+        "senao\n",
         "\n",
-        "       reajustado <- salario + (salario * 0.3)\n",
+        "   reajustado <- salario + (salario * 0.3)\n",
         "\n",
-        "    fimse\n",
-        "\n",
-        "Escreva (\"Salário com reajuste = \", reajustado:0.2, \"\\n\")\n"
+        "fimse\n",
+        "Escreva (\"Salário com reajuste = \", reajustado:0.2, \"\\n\")"
       ],
       "metadata": {
-        "id": "WAlxSIroZ5QK"
-      }
+        "id": "G-6BlqikUswp"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 17**\n",
+        "QUESTÃO 17\n",
         "\n",
-        "var\n",
-        "    x, y, i: inteiro\n",
+        "var x, y, i: inteiro\n",
         "\n",
         "Escreva (\"Digite dois números inteiros separados por espaço: \")\n",
         "\n",
@@ -602,30 +568,28 @@
         "\n",
         "Escreva (x + i*2, \" \")\n",
         "\n",
-        "        FimPara\n",
-        "\n",
+        "    FimPara\n",
         "Escreva (\" \")\n",
         "\n",
-        "    Senão\n",
-        "\n",
+        "Senão\n",
         "Escreva (\"O PRIMEIRO NUMERO NAO É PAR\")\n",
         "\n",
         "Escreva (\" \")\n",
         "\n",
-        "    FimSe\n",
-        "\n"
+        "FimSe"
       ],
       "metadata": {
-        "id": "HViJWfHiaAFz"
-      }
+        "id": "Dyx2fGOhUsjH"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 18**\n",
+        "QUESTÃO 18\n",
         "\n",
-        "Var\n",
-        "    a1, r, n, soma, i: Inteiro\n",
+        "Var a1, r, n, soma, i: Inteiro\n",
         "\n",
         "Escreva (\"Digite o primeiro elemento da PA: \")\n",
         "\n",
@@ -645,23 +609,22 @@
         "\n",
         "soma <- (soma + a1 + (i - 1) * r)\n",
         "\n",
-        " FimPara\n",
+        "FimPara\n",
         "\n",
-        "Escreva (\"A soma dos \", n, \" primeiros termos da PA é: \", soma)\n",
-        "\n"
+        "Escreva (\"A soma dos \", n, \" primeiros termos da PA é: \", soma)"
       ],
       "metadata": {
-        "id": "lM8qhuSTaKYy"
-      }
+        "id": "I0yFyuUvUsWn"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 19**\n",
+        "QUESTÃO 19\n",
         "\n",
-        "var\n",
-        "    n, k: inteiro\n",
-        "    S: real\n",
+        "var n, k: inteiro S: real\n",
         "\n",
         "Escreva (\"Digite um número inteiro positivo maior que 1: \")\n",
         "\n",
@@ -671,26 +634,26 @@
         "\n",
         "Escreva (\"Número invalido!\")\n",
         "\n",
-        "senão\n",
-        "    S <- 0\n",
+        "senão S <- 0\n",
         "\n",
-        "   para k de 1 até n faca\n",
+        "para k de 1 até n faca\n",
         "\n",
-        "   S <- (S + 1.0 / k)\n",
+        "S <- (S + 1.0 / k)\n",
         "\n",
-        "Escreva (\"S = \", S:0:6)\n"
+        "Escreva (\"S = \", S:0:6)"
       ],
       "metadata": {
-        "id": "J17DLPhOaPPS"
-      }
+        "id": "GtSLEpQnUsGH"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "**QUESTÃO 20**\n",
+        "QUESTÃO 20\n",
         "\n",
-        "Var\n",
-        "horas, minutos, segundos, resultado: inteiro\n",
+        "Var horas, minutos, segundos, resultado: inteiro\n",
         "\n",
         "Escreva (\"Digite o valor das horas: \")\n",
         "\n",
@@ -708,12 +671,13 @@
         "\n",
         "Escreva (\"O TEMPO EM SEGUNDOS É = \", resultado)\n",
         "\n",
-        "Escreva (\" \")\n",
-        "\n"
+        "Escreva (\" \")"
       ],
       "metadata": {
-        "id": "Zfw9Ei5FaVbb"
-      }
+        "id": "BwEAZxdfUrlp"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
